deps(java): bump to java 25